--- a/assets/package.json
+++ b/assets/package.json
@@ -7,8 +7,10 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "ansi_up": "^5.0.1",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "uuidv4": "^6.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
