--- a/assets/package.json
+++ b/assets/package.json
@@ -6,7 +6,7 @@
     "ansi_up": "^5.0.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "uuidv4": "^6.2.8"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
